@@ -101,6 +101,7 @@ jalv_load_presets(Jalv* jalv, PresetSink sink, void* data)
 	                                             jalv->nodes.pset_Preset);
 	LILV_FOREACH(nodes, i, presets) {
 		const LilvNode* preset = lilv_nodes_get(presets, i);
+		printf("Preset: %s\n", lilv_node_as_uri(preset));
 		lilv_world_load_resource(jalv->world, preset);
 		LilvNodes* labels = lilv_world_find_nodes(
 			jalv->world, preset, jalv->nodes.rdfs_label, NULL);
@@ -112,6 +113,20 @@ jalv_load_presets(Jalv* jalv, PresetSink sink, void* data)
 			fprintf(stderr, "Preset <%s> has no rdfs:label\n",
 			        lilv_node_as_string(lilv_nodes_get(presets, i)));
 		}
+	}
+	lilv_nodes_free(presets);
+
+	return 0;
+}
+
+int
+jalv_unload_presets(Jalv* jalv)
+{
+	LilvNodes* presets = lilv_plugin_get_related(jalv->plugin,
+	                                             jalv->nodes.pset_Preset);
+	LILV_FOREACH(nodes, i, presets) {
+		const LilvNode* preset = lilv_nodes_get(presets, i);
+		lilv_world_unload_resource(jalv->world, preset);
 	}
 	lilv_nodes_free(presets);
 
