@@ -35,7 +35,7 @@ def configure(conf):
 
     autowaf.check_pkg(conf, 'lv2', atleast_version='1.8.1', uselib_store='LV2')
     autowaf.check_pkg(conf, 'lilv-0', uselib_store='LILV',
-                      atleast_version='0.15.1', mandatory=True)
+                      atleast_version='0.19.2', mandatory=True)
     autowaf.check_pkg(conf, 'serd-0', uselib_store='SERD',
                       atleast_version='0.14.0', mandatory=True)
     autowaf.check_pkg(conf, 'sord-0', uselib_store='SORD',
