@@ -7,9 +7,10 @@ jalv (1.4.5) unstable;
   * Add support for data-access extension (based on patch by Filipe Coelho)
   * Support new UI show/hide interface in console version
   * Add option to print control output changes to stdout
+  * Support saving the same preset several times
   * Update man pages and console jalv help output for new options
 
- -- David Robillard <d@drobilla.net>  Sun, 13 Jul 2014 17:21:51 -0400
+ -- David Robillard <d@drobilla.net>  Tue, 15 Jul 2014 15:15:17 -0400
 
 jalv (1.4.4) stable;
 
